--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <tr><td height="30"></td></tr>
   </table>
 
-              <!-- Abandoned Cart Tile -->
+                          <!-- Abandoned Cart Tile -->
               <tr>
                 <td class="pad-hrz" style="padding:25px 40px;">
                   <table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0">
@@ -123,110 +123,108 @@
                 </td>
               </tr>
 
+              <!-- Recommended -->
+              <tr>
+                <td align="center" style="font:bold 18px/1.2 Lato, Arial, Helvetica, sans-serif;color:#000;padding:20px 40px 10px;">RECOMMENDED JUST FOR YOU</td>
+              </tr>
+              <tr>
+                <td style="height:2px;background:#d5d3d0;"></td>
+              </tr>
+              <tr>
+                <td style="padding:16px 40px;">
+                  <table role="presentation" width="100%">
+                    <tr>
+                      <td width="33%" class="stack" align="center">
+                        <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/6qdixz/1.jpg?eh={{contact.12565}}&es={{contact.12566}}" width="160" alt="Rec 1" style="display:block;width:160px;height:auto;margin:0 auto;">
+                      </td>
+                      <td width="33%" class="stack" align="center">
+                        <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/6qdixz/2.jpg?eh={{contact.12565}}&es={{contact.12566}}" width="160" alt="Rec 2" style="display:block;width:160px;height:auto;margin:0 auto;">
+                      </td>
+                      <td width="33%" class="stack" align="center">
+                        <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/6qdixz/3.jpg?eh={{contact.12565}}&es={{contact.12566}}" width="160" alt="Rec 3" style="display:block;width:160px;height:auto;margin:0 auto;">
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
 
-  <!-- Recommended -->
-  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" bgcolor="#ffffff">
-    <tr><td height="20"></td></tr>
-    <tr>
-      <td align="center" style="font-size:18px;font-weight:bold;color:#000;">RECOMMENDED JUST FOR YOU</td>
-    </tr>
-    <tr><td height="10"></td></tr>
-    <tr>
-      <td align="center">
-        <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="max-width:600px;text-align:center;">
+           <!-- SHOP BY CATEGORY -->
+    <table width="100%" role="presentation" bgcolor="#ffffff">
+      <tr>
+        <td class="px" style="padding-top:14px;padding-bottom:12px;">
+          <table width="100%" role="presentation">
+            <tr>
+              <td><hr></td>
+              <td width="220" align="center"><div class="h1" style="font-size:16px;">Shop by Category</div></td>
+              <td><hr></td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+      <tr><td class="px" style="padding-bottom:16px;">
+        <table width="100%" role="presentation" cellspacing="10">
           <tr>
-            <td width="33%">
-              <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/4dl16d/1.jpg?eh={{contact.12565}}&es={{contact.12566}}" width="172" style="display:block;width:100%;height:auto;border:0;">
-            </td>
-            <td width="33%">
-              <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/4dl16d/2.jpg?eh={{contact.12565}}&es={{contact.12566}}" width="172" style="display:block;width:100%;height:auto;border:0;">
-            </td>
-            <td width="33%">
-              <img src="https://recommender.scarabresearch.com/merchants/17ADCDA308096B9B/4dl16d/3.jpg?eh={{contact.12565}}&es={{contact.12566}}" width="172" style="display:block;width:100%;height:auto;border:0;">
-            </td>
+            <td width="50%"><a class="pill" href="#" target="_blank">Fryware &nbsp;›</a></td>
+            <td width="50%"><a class="pill" href="#" target="_blank">Multi-Pans &nbsp;›</a></td>
+          </tr>
+          <tr>
+            <td width="50%"><a class="pill" href="#" target="_blank">Saucepans &nbsp;›</a></td>
+            <td width="50%"><a class="pill" href="#" target="_blank">Casseroles &nbsp;›</a></td>
+          </tr>
+          <tr>
+            <td width="50%"><a class="pill" href="#" target="_blank">Roasting &nbsp;›</a></td>
+            <td width="50%"><a class="pill" href="#" target="_blank">Lids &nbsp;›</a></td>
           </tr>
         </table>
-      </td>
-    </tr>
-    <tr><td height="30"></td></tr>
-  </table>
+      </td></tr>
+    </table>
 
-  <!-- Shop by Category -->
-  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" bgcolor="#ffffff">
-    <tr>
-      <td align="center" style="font-size:18px;font-weight:bold;color:#000;">Shop by Category</td>
-    </tr>
-    <tr><td height="15"></td></tr>
-    <tr>
-      <td align="center">
-        <table role="presentation" cellpadding="10" cellspacing="0" width="100%" style="max-width:600px;text-align:center;">
-          <tr>
-            <td><a href="#" style="display:block;padding:12px;background:#000;color:#fff;font-weight:bold;text-decoration:none;">Fryware ></a></td>
-            <td><a href="#" style="display:block;padding:12px;background:#000;color:#fff;font-weight:bold;text-decoration:none;">Saucepans ></a></td>
-          </tr>
-          <tr><td height="12"></td></tr>
-          <tr>
-            <td><a href="#" style="display:block;padding:12px;background:#000;color:#fff;font-weight:bold;text-decoration:none;">Roasting ></a></td>
-            <td><a href="#" style="display:block;padding:12px;background:#000;color:#fff;font-weight:bold;text-decoration:none;">Casseroles ></a></td>
-          </tr>
-          <tr><td height="12"></td></tr>
-          <tr>
-            <td colspan="2"><a href="#" style="display:block;padding:12px;background:#000;color:#fff;font-weight:bold;text-decoration:none;">Shop All ></a></td>
-          </tr>
+    <!-- AFTER CTA IMAGE STRIPS -->
+    <table width="100%" role="presentation" bgcolor="#ffffff">
+      <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295693.jpg" alt="The Bessemer Difference"></td></tr>
+      <tr><td style="height:16px"></td></tr>
+      <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295694.jpg" alt="Afterpay: Cook now, pay later"></td></tr>
+      <tr><td style="height:16px"></td></tr>
+      <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295695.jpg" alt="More than half a century of cooking with Bessemer"></td></tr>
+      <tr><td style="height:16px"></td></tr>
+      <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295696.jpg" alt="PFOA Free • Designed in Australia • Lifetime Guarantee"></td></tr>
+    </table>
+
+    <!-- SHIPPING / RETURNS TEXT STRIP -->
+    <table width="100%" role="presentation" bgcolor="#ffffff">
+      <tr>
+        <td align="center" style="font:14px/1.4 Arial,Helvetica,sans-serif; color:#000; padding:12px 20px;">
+          <strong>FREE SHIPPING ON ORDERS OVER $130</strong> &nbsp; | &nbsp; <strong>30 DAYS RETURN</strong>
+        </td>
+      </tr>
+    </table>
+
+    <!-- FOOTER -->
+    <table width="100%" role="presentation" bgcolor="#e3e3e3">
+      <tr><td class="px" style="padding-top:26px;">
+        <table width="100%" role="presentation">
+          <tr><td align="center" class="h1" style="font-size:18px;">Need help or advice?</td></tr>
+          <tr><td align="center" class="body" style="padding-top:8px;">
+            Live Chat: <a href="https://bessemer.com.au/" target="_blank" style="color:#000;text-decoration:underline;">bessemer.com.au</a><br>
+            9am – 9:30pm AEDT / AEST Mon–Fri • 10am – 5:30pm AEDT / AEST Sat &amp; Sun
+          </td></tr>
+          <tr><td align="center" style="padding:12px 0 6px;">
+            <a href="#" target="_blank" class="small" style="text-decoration:underline;color:#000;">Click here to Contact Customer Service</a>
+          </td></tr>
+          <tr><td align="center" class="small" style="padding-top:10px;">
+            Mailing Address: Bessemer | PO Box 7224 | Melbourne 3004 | Australia<br>
+            This email was sent by Bessemer | Global Retail Brands Australia Pty Ltd
+          </td></tr>
+          <tr><td align="center" class="small" style="padding:12px 0 24px;">
+            To unsubscribe, <a href="#" style="text-decoration:underline;color:#000;">click here</a>.
+          </td></tr>
         </table>
-      </td>
-    </tr>
-    <tr><td height="30"></td></tr>
-  </table>
+      </td></tr>
+    </table>
 
-  <!-- After CTA banners -->
-  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" bgcolor="#ffffff">
-    <tr><td align="center"><img src="https://link.bessemer.com.au/custloads/1024002066/md_295693.jpg" width="620" style="display:block;width:100%;max-width:620px;border:0;"></td></tr>
-    <tr><td height="20"></td></tr>
-    <tr><td align="center"><img src="https://link.bessemer.com.au/custloads/1024002066/md_295694.jpg" width="620" style="display:block;width:100%;max-width:620px;border:0;"></td></tr>
-    <tr><td height="20"></td></tr>
-    <tr><td align="center"><img src="https://link.bessemer.com.au/custloads/1024002066/md_295696.jpg" width="620" style="display:block;width:100%;max-width:620px;border:0;"></td></tr>
-  </table>
-
-  <!-- USP Repeat -->
-  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" bgcolor="#ffffff">
-    <tr><td height="20"></td></tr>
-    <tr>
-      <td align="center" style="font-size:16px;font-weight:bold;color:#000;">
-        FREE SHIPPING ON ORDERS OVER $130 | 30 DAYS RETURN
-      </td>
-    </tr>
-    <tr><td height="20"></td></tr>
-  </table>
-
-  <!-- Footer -->
-  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" bgcolor="#e3e3e3">
-    <tr><td height="20"></td></tr>
-    <tr>
-      <td align="center" style="font-size:18px;font-weight:bold;color:#000;">Need help or advice?</td>
-    </tr>
-    <tr><td height="10"></td></tr>
-    <tr>
-      <td align="center" style="font-size:14px;color:#000;">
-        Live Chat : <a href="https://bessemer.com.au" style="color:#000;text-decoration:none;">bessemer.com.au</a><br>
-        9am - 9:30pm AEDT/AEST Mon-Fri<br>
-        10am - 5:30pm AEDT/AEST Sat and Sun<br><br>
-        <a href="https://bessemer.com.au/contact" style="color:#000;text-decoration:underline;">Click here to Contact Customer Service</a>
-      </td>
-    </tr>
-    <tr><td height="20"></td></tr>
-  </table>
-
-  <!-- Legal -->
-  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" bgcolor="#ffffff">
-    <tr>
-      <td align="center" style="font-size:12px;color:#000;padding:20px;">
-        T&amp;C's: Your single-use $10 discount is only valid on an order with a minimum spend of $100 or more, excluding shipping costs. Valid for 7 days from the date of this email. <br>
-        Mailing Address: Bessemer | Po Box 7224 | Melbourne 3004 | Australia <br>
-        To unsubscribe, please <a href="{{ unsubscribe_url }}" style="color:#000;text-decoration:underline;">click here</a>.
-      </td>
-    </tr>
-  </table>
+  </div>
+</body>
+</html>
 
 </body>
 </html>
