--- a/index.html
+++ b/index.html
@@ -120,16 +120,16 @@
 
                   <!-- Title + prices -->
                   <td valign="middle">
-                    <p style="margin:0 0 4px 0; font-size:18px; font-weight:bold; color:#000;">{{ item['title'] }}</p>
+                    <p style="margin:0 0 4px 0; font-size:18px; font-weight:bold; color:#000;">Bessemer Black</p>
 
-                   Bessemer Black
+                   
                     <p style="margin:0; font-size:14px; color:#888; text-decoration:line-through;">
                       $259.99
                     </p>
-                    {% endif %}
+                    
 
                     <p style="margin:4px 0 0 0; font-size:18px; font-weight:bold; color:#ed1b24;">
-                      Regular price$179.99
+                      $179.99
                     </p>
                   </td>
 
