--- a/index.html
+++ b/index.html
@@ -196,146 +196,117 @@
   </td>
 </tr>
 
-<tr>
-  <td class="px" style="padding:18px 40px 0 40px">
-    <table role="presentation" class="cat-grid" cellpadding="0" cellspacing="0" border="0" width="100%">
-      <!-- Row 1 -->
-      <tr>
-        <td align="center" width="50%" style="padding-bottom:18px;">
-          <a class="cat-btn" href="https://bessemer.com.au/collections/fryware" target="_blank"
-             style="display:block; background:#000; color:#fff; font-weight:bold; padding:14px 22px; text-decoration:none;">
-            Fryware &gt;
-          </a>
-        </td>
-        <td align="center" width="50%" style="padding-bottom:18px;">
-          <a class="cat-btn" href="https://bessemer.com.au/collections/multi-pans" target="_blank"
-             style="display:block; background:#000; color:#fff; font-weight:bold; padding:14px 22px; text-decoration:none;">
-            Multi-Pans &gt;
-          </a>
-        </td>
-      </tr>
-      <!-- Row 2 -->
-      <tr>
-        <td align="center" style="padding-bottom:18px;">
-          <a class="cat-btn" href="https://bessemer.com.au/collections/saucepans" target="_blank"
-             style="display:block; background:#000; color:#fff; font-weight:bold; padding:14px 22px; text-decoration:none;">
-            Saucepans &gt;
-          </a>
-        </td>
-        <td align="center" style="padding-bottom:18px;">
-          <a class="cat-btn" href="https://bessemer.com.au/collections/casseroles" target="_blank"
-             style="display:block; background:#000; color:#fff; font-weight:bold; padding:14px 22px; text-decoration:none;">
-            Casseroles &gt;
-          </a>
-        </td>
-      </tr>
-      <!-- Row 3 -->
-      <tr>
-        <td align="center" style="padding-bottom:18px;">
-          <a class="cat-btn" href="https://bessemer.com.au/collections/roasting" target="_blank"
-             style="display:block; background:#000; color:#fff; font-weight:bold; padding:14px 22px; text-decoration:none;">
-            Roasting &gt;
-          </a>
-        </td>
-        <td align="center" style="padding-bottom:18px;">
-          <a class="cat-btn" href="https://bessemer.com.au/collections/lids" target="_blank"
-             style="display:block; background:#000; color:#fff; font-weight:bold; padding:14px 22px; text-decoration:none;">
-            Lids &gt;
-          </a>
-        </td>
-      </tr>
-    </table>
-  </td>
-</tr>
 
-<!-- Full-width Shop All -->
-<tr>
-  <td class="px" style="padding:6px 40px 0 40px">
-    <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%">
-      <tr>
-        <td align="center">
-          <a href="https://bessemer.com.au/collections/all" target="_blank"
-             style="display:block; background:#000; color:#fff; font-weight:bold; padding:14px 22px; text-decoration:none;">
-            Shop All
-          </a>
-        </td>
-      </tr>
-    </table>
-  </td>
-</tr>
-<!-- ===== /Shop by Category ===== -->
+              <!-- Category buttons -->
+              <tr>
+                <td style="padding:0 40px;">
+                  <table role="presentation" width="100%">
+                    <tr>
+                      <td align="center" style="padding:6px;"><a href="https://bessemer.com.au/collections/fryware" style="display:block;background:#000;color:#fff;text-decoration:none;font:bold 16px Lato;padding:12px;">Fryware &gt;</a></td>
+                      <td align="center" style="padding:6px;"><a href="https://bessemer.com.au/collections/multi-pans" style="display:block;background:#000;color:#fff;text-decoration:none;font:bold 16px Lato;padding:12px;">Multi-Pans &gt;</a></td>
+                    </tr>
+                    <tr>
+                      <td align="center" style="padding:6px;"><a href="https://bessemer.com.au/collections/saucepans" style="display:block;background:#000;color:#fff;text-decoration:none;font:bold 16px Lato;padding:12px;">Saucepans &gt;</a></td>
+                      <td align="center" style="padding:6px;"><a href="https://bessemer.com.au/collections/casseroles" style="display:block;background:#000;color:#fff;text-decoration:none;font:bold 16px Lato;padding:12px;">Casseroles &gt;</a></td>
+                    </tr>
+                    <tr>
+                      <td align="center" style="padding:6px;"><a href="https://bessemer.com.au/collections/roasting" style="display:block;background:#000;color:#fff;text-decoration:none;font:bold 16px Lato;padding:12px;">Roasting &gt;</a></td>
+                      <td align="center" style="padding:6px;"><a href="https://bessemer.com.au/collections/lids" style="display:block;background:#000;color:#fff;text-decoration:none;font:bold 16px Lato;padding:12px;">Lids &gt;</a></td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+              <tr>
+                <td style="padding:12px 40px;">
+                  <table role="presentation" width="100%">
+                    <tr>
+                      <td bgcolor="#000" align="center">
+                        <a href="https://bessemer.com.au/collections/all" style="display:block;padding:14px 22px;font:bold 16px Lato,Arial,sans-serif;color:#fff;text-decoration:none;">Shop All</a>
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
 
+              <!-- Footer graphics (as per reference) -->
+              <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295693.jpg" width="600" class="full" alt="Afterpay – Cook Now Pay Later" style="display:block;border:0;"></td></tr>
+              <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295694.jpg" width="600" class="full" alt="Afterpay – Cook Now Pay Later" style="display:block;border:0;"></td></tr>
+              <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295696.jpg" width="600" class="full" alt="PFOA Free / Designed in Australia / Lifetime Guarantee" style="display:block;border:0;"></td></tr>
 
-          <!-- After-CTA image trio -->
-          <tr><td style="height:22px"></td></tr>
-          <tr>
-            <td align="center" class="px">
-              <a href="https://bessemer.com.au" target="_blank">
-                <img src="https://link.bessemer.com.au/custloads/1024002066/md_295693.jpg" width="620" alt="The Bessemer Difference" style="display:block; border:0; width:620px; height:auto" class="img">
-              </a>
-            </td>
-          </tr>
-          <tr><td style="height:22px"></td></tr>
-          <tr>
-            <td align="center" class="px">
-              <a href="https://bessemer.com.au" target="_blank">
-                <img src="https://link.bessemer.com.au/custloads/1024002066/md_295694.jpg" width="620" alt="Cook Now, Pay Later" style="display:block; border:0; width:620px; height:auto" class="img">
-              </a>
-            </td>
-          </tr>
-          <tr><td style="height:22px"></td></tr>
-          <tr>
-            <td align="center" class="px">
-              <a href="https://bessemer.com.au" target="_blank">
-                <img src="https://link.bessemer.com.au/custloads/1024002066/md_295696.jpg" width="620" alt="PFOA Free" style="display:block; border:0; width:620px; height:auto" class="img">
-              </a>
-            </td>
-          </tr>
+              <!-- Shipping / Returns inline -->
+              <tr>
+                <td style="padding:16px 10px 0;">
+                  <table role="presentation" width="100%">
+                    <tr>
+                      <td align="center" style="font:bold 16px Lato,Arial,sans-serif;color:#000;">FREE SHIPPING ON ORDERS OVER $130</td>
+                      <td class="hide-m" align="center" style="color:#000;">|</td>
+                      <td align="center" style="font:bold 16px Lato,Arial,sans-serif;color:#000;">30 DAYS RETURN</td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
 
-          <!-- Shipping / returns strip -->
-          <tr><td style="height:22px"></td></tr>
-          <tr>
-            <td class="px" align="center">
-              <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%">
-                <tr>
-                  <td align="center" style="font-weight:bold; font-size:16px;">FREE SHIPPING ON ORDERS OVER $130</td>
-                  <td class="hidden-m" width="20" align="center" style="font-weight:bold; font-size:16px;">|</td>
-                  <td align="center" style="font-weight:bold; font-size:16px;">30 DAYS RETURN</td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-          <tr><td style="height:22px"></td></tr>
+              <!-- Help panel -->
+              <tr>
+                <td style="background:#dcdcdc; padding:24px 10px;">
+                  <table width="100%">
+                    <tr><td align="center" style="font:bold 18px Lato,Arial,sans-serif;color:#000;">Need help or advice?</td></tr>
+                    <tr><td align="center" style="font:16px Lato,Arial,sans-serif;color:#000;">
+                      Live Chat : <a href="https://bessemer.com.au/" style="color:#000;text-decoration:underline;">bessemer.com.au</a><br>
+                      9am - 9:30pm AEDT / AEST Mon-Fri<br>
+                      10am - 5:30pm AEDT / AEST Sat and Sun
+                    </td></tr>
+                    <tr><td align="center" style="font:16px Lato,Arial,sans-serif;">
+                      <a href="https://bessemer.com.au/pages/contact-us" style="color:#000;text-decoration:underline;">Click here to Contact Customer Service</a>
+                    </td></tr>
+                  </table>
+                </td>
+              </tr>
 
-          <!-- Footer / help -->
-          <tr>
-            <td bgcolor="#e3e3e3" class="px" align="center" style="padding:24px 16px">
-              <p style="margin:0; font-weight:bold; font-size:18px;">Need help or advice?</p>
-              <div style="height:10px"></div>
-              <p style="margin:0; font-size:16px; line-height:1.4">
-                Live Chat : <a href="https://bessemer.com.au" target="_blank" style="text-decoration:underline; color:#000">bessemer.com.au</a><br>
-                9am - 9:30pm AEDT / AEST Mon–Fri · 10am - 5:30pm AEDT / AEST Sat &amp; Sun<br>
-                <a href="https://bessemer.com.au/pages/contact-us" target="_blank" style="text-decoration:underline; color:#000">Click here to Contact Customer Service</a>
-              </p>
-            </td>
-          </tr>
+              <!-- Socials + payment icons -->
+              <tr>
+                <td style="padding:22px 10px 0;">
+                  <table role="presentation" width="100%">
+                    <tr>
+                      <td align="center" style="padding-bottom:14px;">
+                        <a href="https://www.facebook.com/BessemerAU" style="display:inline-block;margin:0 14px;">
+                          <img src="https://link.bessemer.com.au/custloads/1024002066/vce/facebook.png" width="38" alt="Facebook" style="display:block;border:0;">
+                        </a>
+                        <a href="https://www.instagram.com/bessemer_au/" style="display:inline-block;margin:0 14px;">
+                          <img src="https://link.bessemer.com.au/custloads/1024002066/vce/instagram.png" width="38" alt="Instagram" style="display:block;border:0;">
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td align="center" style="padding-bottom:16px;">
+                        <img src="https://link.bessemer.com.au/custloads/1024002066/vce/afterpay1.png" width="65" alt="Afterpay" style="margin:0 6px;border:0;">
+                        <img src="https://link.bessemer.com.au/custloads/1024002066/vce/amex1.png" width="51" alt="Amex" style="margin:0 6px;border:0;">
+                        <img src="https://link.bessemer.com.au/custloads/1024002066/vce/paypal1.png" width="43" alt="PayPal" style="margin:0 6px;border:0;">
+                        <img src="https://link.bessemer.com.au/custloads/1024002066/vce/applepay1.png" width="37" alt="Apple Pay" style="margin:0 6px;border:0;">
+                        <img src="https://link.bessemer.com.au/custloads/1024002066/vce/visa1.png" width="35" alt="VISA" style="margin:0 6px;border:0;">
+                        <img src="https://link.bessemer.com.au/custloads/1024002066/vce/mastercard1.png" width="23" alt="Mastercard" style="margin:0 6px;border:0;">
+                        <img src="https://link.bessemer.com.au/custloads/1024002066/vce/googlepay1.png" width="46" alt="Google Pay" style="margin:0 6px;border:0;">
+                        <img src="https://link.bessemer.com.au/custloads/1024002066/vce/zip.png" width="54" alt="Zip" style="margin:0 6px;border:0;">
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
 
-          <!-- Legal + unsubscribe -->
-          <tr>
-            <td class="px" align="center" style="padding:24px 16px; font-size:12px; color:#000;">
-              T&amp;C's: Your single-use $10 discount is only valid on an order with a minimum spend of $100 or more, excluding shipping costs.
-              Valid for 7 days from the date of this email. Redeem at <a href="https://www.bessemer.com.au" target="_blank" style="text-decoration:underline; color:#000">www.bessemer.com.au</a>.
-              <br><br>
-              Mailing Address: Bessemer | PO Box 7224 | Melbourne 3004 | Australia<br>
-              This email was sent by Bessemer | Global Retail Brands Australia Pty Ltd
-              <br><br>
-              To unsubscribe, please <a href="{{ unsubscribe_link }}" target="_blank" style="text-decoration:underline; color:#000">click here</a>.
-            </td>
-          </tr>
+              <!-- Legal footer -->
+              <tr>
+                <td align="center" style="font:12px Lato,Arial,sans-serif;color:#000;padding:20px;">
+                  Mailing Address: Bessemer | PO Box 7224 | Melbourne 3004 | Australia<br>
+                  This email was sent by Bessemer | Global Retail Brands Australia Pty Ltd
+                  <br><br>
+                  To unsubscribe from our mailing list, please <a href="#UNSUBSCRIBE_HREF#" style="color:#000;text-decoration:underline;">click here</a>.
+                </td>
+              </tr>
 
-        </table>
-      </td>
-    </tr>
-  </table>
-</body>
+            </table>
+          </td>
+        </tr>
+      </table>
+    </center>
+  </body>
 </html>
