--- a/index.html
+++ b/index.html
@@ -228,10 +228,12 @@
                 </td>
               </tr>
 
-              <!-- Footer graphics (as per reference) -->
+             <!-- Footer graphics (as per reference) -->
               <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295693.jpg" width="600" class="full" alt="Afterpay – Cook Now Pay Later" style="display:block;border:0;"></td></tr>
               <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295694.jpg" width="600" class="full" alt="Afterpay – Cook Now Pay Later" style="display:block;border:0;"></td></tr>
+              <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295695.jpg" width="600" class="full" alt="PFOA Free / Designed in Australia / Lifetime Guarantee" style="display:block;border:0;"></td></tr>
               <tr><td><img src="https://link.bessemer.com.au/custloads/1024002066/md_295696.jpg" width="600" class="full" alt="PFOA Free / Designed in Australia / Lifetime Guarantee" style="display:block;border:0;"></td></tr>
+
 
               <!-- Shipping / Returns inline -->
               <tr>
@@ -296,6 +298,7 @@
               <!-- Legal footer -->
               <tr>
                 <td align="center" style="font:12px Lato,Arial,sans-serif;color:#000;padding:20px;">
+                   T&C's: Your single-use $10 discount is only valid on an order with a minimum spend of $100 or more, excluding shipping costs. Valid for 7 days from the date of this email. This discount is redeemable online at www.bessemer.com.au by entering your discount code in the Promotional Code field at checkout. Discount is not redeemable against prior purchases, for gift cards or cash. Discount cannot be used in conjunction with any other discount code offer.
                   Mailing Address: Bessemer | PO Box 7224 | Melbourne 3004 | Australia<br>
                   This email was sent by Bessemer | Global Retail Brands Australia Pty Ltd
                   <br><br>
