--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                   <table role="presentation" width="100%">
                     <tr>
                       <td bgcolor="#000" align="center">
-                        <a href="https://bessemer.com.au/collections/all" style="display:block;padding:14px 22px;font:bold 16px Lato,Arial,sans-serif;color:#fff;text-decoration:none;">Shop All</a>
+                        <a href="https://bessemer.com.au/collections/all" style="display:block;padding:6px;font:bold 16px Lato,Arial,sans-serif;color:#fff;text-decoration:none;">Shop All</a>
                       </td>
                     </tr>
                   </table>
